<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lichi.goodrongyi.ui.activity.discover.CreditQueryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/tv_blue">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:drawableLeft="@mipmap/back"
            android:gravity="center"
            android:text="返回"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="立木征信"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_margin="8dp"
            android:src="@mipmap/more_icon" />
    </RelativeLayout>



    <LinearLayout
        android:clickable="true"
        android:id="@+id/ll_current_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="所在城市："
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:layout_gravity="center_vertical|end"/>

        <TextView
            android:id="@+id/tv_current_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:textAlignment="viewEnd"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@mipmap/arrow"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="账号："
            android:textSize="16sp"
            android:textAlignment="viewEnd"
            android:layout_gravity="end|center_vertical"/>

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/account_input_hint"
            android:textSize="16sp"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="密码："
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:layout_gravity="end|center_vertical"/>

        <EditText
            android:id="@+id/et_password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:hint="@string/password_input_hint"
            android:textSize="16sp"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="1dp"
        android:background="@color/white">

        <TextView
            android:layout_width="90sp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="验证码："
            android:textAlignment="viewEnd"
            android:textSize="16sp"
            android:layout_gravity="center_vertical|end"/>

        <EditText
            android:id="@+id/et_confirm_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:hint="@string/confirm_code_input_hint"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">
        
        <ImageView
            android:id="@+id/iv_agreement_check"
            android:src="@mipmap/checked_false"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="同意"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/tv_agreement_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/authorize_agreement_title"
            android:textColor="@color/blue"
            android:textSize="14sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_quick_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="快速查询"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/botton_solid"/>

</LinearLayout>
