<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_background"
    android:orientation="vertical"
    tools:context="com.lichi.goodrongyi.ui.activity.visa.ManuallyAddBillActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/tv_blue">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/iv_back"
            android:gravity="center"
            android:text="返回"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="课程内容"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:background="@color/gray_background">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/rl_description_video"
                    android:layout_width="match_parent"
                    android:layout_height="220dp">

                    <WebView
                        android:id="@+id/webview"
                        android:layout_width="match_parent"

                        android:layout_height="220dp"></WebView>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_course_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:text="聚集财富技巧"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_more" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/white"
                    android:clickable="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/head"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:src="@drawable/stance_img"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_teacher_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center_vertical"
                                android:text="肖老师"
                                android:textColor="@color/text_title"
                                android:textSize="@dimen/font_size_more" />

                            <TextView
                                android:id="@+id/tv_teacher_type"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:gravity="center_vertical"
                                android:text="主讲老师"
                                android:textColor="@color/text_secondary_title"
                                android:textSize="@dimen/font_size_more" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_teacher_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/teacher_description_sample"
                            android:textSize="@dimen/font_size_small" />

                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_course_price_label"
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:text="课程金额"
                        android:textColor="@color/text_secondary_title"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_toRightOf="@+id/tv_course_price_label"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="8800元"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/originalprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_toRightOf="@+id/tv_course_price"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="8800元"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_state_signed_up"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/course_signedup"
                        android:textColor="@color/tv_blue"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/tv_course_state_purchased"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:text="@string/course_purchased"
                        android:textColor="@color/cred"
                        android:visibility="invisible" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:text="开课日期"
                        android:textColor="@color/text_secondary_title"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_open_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="2018-01-01 09:00"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:text="人数"
                        android:textColor="@color/text_secondary_title"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_student_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="200人"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:text="地址"
                        android:textColor="@color/text_secondary_title"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="武汉市XX大道XXXX号XX宾馆X号厅"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="55dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="80sp"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:gravity="right"
                        android:text="开课说明"
                        android:textColor="@color/text_secondary_title"
                        android:textSize="@dimen/font_size_small" />

                    <TextView
                        android:id="@+id/tv_course_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:text="2018-01-01 09:00"
                        android:textColor="@color/app_coures_color1"
                        android:textSize="@dimen/font_size_small" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_purchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/cred"
            android:text="立即购买"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:text="我要报名"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_small" />
    </LinearLayout>

    <!--播放全屏视频时用-->
    <FrameLayout
        android:id="@+id/video_fullView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:visibility="gone" />
</RelativeLayout>
